# VoiceAI

./: .gitignore  .gitleaks.toml  CLAUDE.md
voicescribe-api-gateway/: .env.example  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  openapi.yaml  pyproject.toml  run.py
voicescribe-api-gateway/.github/workflows/: ci.yml
voicescribe-api-gateway/app/: __init__.py  main.py
voicescribe-api-gateway/app/api/: dependencies.py  middleware.py
voicescribe-api-gateway/app/core/: config.py  database.py  error_handlers.py  logging.py  middleware.py  security.py
voicescribe-api-gateway/app/models/: schemas.py
voicescribe-api-gateway/app/services/: rate_limit.py  redis_client.py  svc02_client.py  svc03_client.py  svc05_client.py
voicescribe-api-gateway/config/: gateway.yml
voicescribe-api-gateway/docs/: AUTH.md  MIGRATION-GUIDE.md  TIER-ENFORCEMENT.md
voicescribe-api-gateway/tests/: conftest.py  test_auth.py  test_config.py  test_download_proxy.py  test_health.py  test_integration.py  test_websocket_auth.py
voicescribe-api-gateway/voicescribe_api_gateway.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
voicescribe-file-ingestion/: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  openapi.yaml  pyproject.toml  run.py
voicescribe-file-ingestion/.github/workflows/: ci.yml
voicescribe-file-ingestion/app/: main.py
voicescribe-file-ingestion/app/api/: health_metrics.py  routers.py
voicescribe-file-ingestion/app/core/: config.py  database.py  logging_config.py  metrics.py  redis_client.py  security.py
voicescribe-file-ingestion/app/models/: schemas.py
voicescribe-file-ingestion/app/services/: cleanup.py  probe.py  storage.py  validation.py
voicescribe-file-ingestion/config/: ingestion.yml
voicescribe-file-ingestion/docs/: REUSABILITY.md  SECURITY.md
voicescribe-file-ingestion/migrations/: alembic.ini  env.py
voicescribe-file-ingestion/migrations/versions/: 20260314_0001_ingested_files.py
voicescribe-file-ingestion/tests/: conftest.py
voicescribe-file-ingestion/tests/integration/: test_api.py
voicescribe-file-ingestion/tests/unit/: test_cleanup.py  test_streaming_sha256.py  test_validation_magic.py
voicescribe-quota-manager/: .env.example  .gitignore  CHANGELOG.md  Dockerfile  docker-compose.yml  openapi.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
voicescribe-quota-manager/.github/workflows/: ci.yml
voicescribe-quota-manager/app/: __init__.py  main.py
voicescribe-quota-manager/app/api/: __init__.py  dependencies.py  health_metrics.py  routers.py
voicescribe-quota-manager/app/core/: config.py  database.py  limiter.py  logging_config.py  redis_client.py  redis_utils.py
voicescribe-quota-manager/app/models/: schemas.py
voicescribe-quota-manager/app/services/: quota_service.py
voicescribe-quota-manager/config/: quota.yml
voicescribe-quota-manager/docs/: README.md  REUSABILITY.md
voicescribe-quota-manager/docs/ADR/: ADR-001-redis-atomicity.md
voicescribe-quota-manager/migrations/: env.py
voicescribe-quota-manager/migrations/versions/: 20260314_0001_free_tier_usage.py
voicescribe-quota-manager/scripts/: init-db.sql  seed_dev.py
voicescribe-quota-manager/tests/: __init__.py  conftest.py  test_api.py  test_integration_postgres.py  test_integration_redis.py  test_openapi_sync.py  test_quota_service_unit.py  test_redis_utils.py  test_schemas.py
voicescribe-transcription-engine/: .env.example  CHANGELOG.md  Dockerfile  Dockerfile.cpu  README.md  openapi.yaml  pyproject.toml  run.py
voicescribe-transcription-engine/.github/workflows/: ci.yml
voicescribe-transcription-engine/ADR/: ADR-001-int8-float16.md
voicescribe-transcription-engine/app/: celery_app.py  main.py  tasks.py
voicescribe-transcription-engine/app/api/: health_metrics.py  routers.py
voicescribe-transcription-engine/app/core/: config.py  gpu_state.py  logging_config.py  metrics.py  security.py
voicescribe-transcription-engine/app/models/: schemas.py
voicescribe-transcription-engine/app/services/: audio_utils.py  callback_client.py  model_loader.py  transcription.py
voicescribe-transcription-engine/config/: transcription.yml
voicescribe-transcription-engine/docs/: GPU-REQUIREMENTS.md  MODELS.md  REUSABILITY.md
voicescribe-transcription-engine/tests/: conftest.py
(+206 files in other folders)
